--- a/2017-0003 (COD).md
+++ b/2017-0003 (COD).md
@@ -7,26 +7,40 @@ Article 1
 Subject matter
 ```
 1. This Regulation lays down rules regarding the protection of fundamental rights and
-    freedoms of natural and legal persons in the provision and use of electronic
+    freedoms of natural persons in the provision and use of electronic
     communications services, and in particular, the rights to respect for private life and
     communications and the protection of natural persons with regard to the processing
     of personal data.
-2. This Regulation ensures free movement of electronic communications data and
-    electronic communications services within the Union, which shall be neither
+2. The free movement of electronic communications data and
+    electronic communications services within the Union shall be neither
     restricted nor prohibited for reasons related to the respect for the private life and
-    communications of natural and legal persons and the protection of natural persons
-    with regard to the processing of personal data.
+    communications of natural persons and the protection of natural persons
+    with regard to the processing of personal data, and for protection of communications of legal persons. 
 3. The provisions of this Regulation particularise and complement Regulation (EU)
     2016/679 by laying down specific rules for the purposes mentioned in paragraphs 1
-    and 2.
+    to 2.
 
 ```
 Article 2
 Material Scope
 ```
-1. This Regulation applies to the processing of electronic communications data carried
-    out in connection with the provision and the use of electronic communications
-    services and to information related to the terminal equipment of end-users.
+1. This Regulation applies to:
+
+(a) the processing of electronic communications content data in transmission and of
+electronic communications metadata carried out in connection with the provision and the
+use of electronic communications services;
+
+(b) information [related to or processed by or emitted by or stored in] the terminal
+equipment of end-users.
+
+(c) the placing on the market of software permitting electronic communications,
+including the retrieval and presentation of information on the internet;
+
+(d) the offering of a publicly available directory of end-users of electonic communications
+services;
+
+(e) the sending or presenting direct marketing communications to end-users.
+
 2. This Regulation does not apply to:
 
 (a) activities which fall outside the scope of Union law;
@@ -57,27 +71,34 @@ Territorial scope and representative
 ```
 1. This Regulation applies to:
 
-(a) the provision of electronic communications services to end-users in the Union,
-irrespective of whether a payment of the end-user is required;
+(a) the provision of electronic communications services to end-users in the Union
 
-(b) the use of such services;
+(aa) the processing of electronic communications content in transmission of electronic
+communications metadata of end-users located in the Union;
 
-(c) the protection of information related to the terminal equipment of end-users located
+(c) the protection of information [related to or processed by or emitted by or stored in] the
+terminal equipment of end-users located in the Union.
+
+(ca) the offering of publicly available directories of end-users of electronic
+communications services located in the Union;
+
+(cb) the placing on the Union market of software permitting electronic communications,
+including the retrieval and presentation of information on the internet;
+
+(cc) the [sending or presenting] of direct marketing communications to end-users located
 in the Union.
 
-2. Where the provider of an electronic communications service is not established in the
+2. Where the [provider of an electronic communications service] is not established in the
     Union it shall designate in writing a representative in the Union.
 3. The representative shall be established in one of the Member States where the end-
     users of such electronic communications services are located.
-4. The representative shall have the power to answer questions and provide information
+4. The representative shall be mandated by the provider it represents to be addressed
     in addition to or instead of the provider it represents, in particular, to supervisory
     authorities, and end-users, on all issues related to processing electronic
     communications data for the purposes of ensuring compliance with this Regulation.
 5. The designation of a representative pursuant to paragraph 2 shall be without
-    prejudice to legal actions, which could be initiated against a natural or legal person
-    who processes electronic communications data in connection with the provision of
-    electronic communications services from outside the Union to end-users in the
-    Union.
+    prejudice to legal actions, which could be initiated against the provider it
+    represents.
 
 ```
 Article 4
@@ -90,23 +111,19 @@ Definitions
 (b) the definitions of ‘electronic communications network’, ‘electronic communications
 service’, ‘interpersonal communications service’, ‘number-based interpersonal
 communications service’, ‘number-independent interpersonal communications
-
-(^9) Directive 2000/31/EC of the European Parliament and of the Council of 8 June 2000 on certain legal
-aspects of information society services, in particular electronic commerce, in the Internal Market
-('Directive on electronic commerce') (OJ L 178, 17.7.2000, p. 1–16).
-
-
-```
-service’, ‘end-user’ and ‘call’ in points (1), (4), (5), (6), (7), (14) and (21)
+service’, ‘end-user’ and ‘call’ in paragraphs (1), (4), (5), (6), (7), (14) and (21)
 respectively of Article 2 of [Directive establishing the European Electronic
 Communications Code];
-```
-(c) the definition of 'terminal equipment' in point (1) of Article 1 of Commission
-Directive 2008/63/EC^10.
+
+(c) the definition of 'terminal equipment' in Article 1(1) of Commission
+Directive 2008/63/EC.
+
+(d) the defintion of ‘information society service’ in point (b) of Article 1 (1) of Directive
+(EU) 2015/1535.
 
 2. For the purposes of point (b) of paragraph 1, the definition of ‘interpersonal
     communications service’ shall include services which enable interpersonal and
-    interactive communication merely as a minor ancillary feature that is intrinsically
+    interactive communication merely as a ancillary feature that is intrinsically
     linked to another service.
 3. In addition, for the purposes of this Regulation the following definitions shall apply:
 
@@ -128,7 +145,7 @@ communications services, whether in printed or electronic form, which is publish
 or made available to the public or to a section of the public, including by means of a
 directory enquiry service;
 
-(e) ‘electronic mail’ means any electronic message containing information such as text,
+(e) ‘electronic message’ means any electronic message containing information such as text,
 voice, video, sound or image sent over an electronic communications network which
 can be stored in the network or in related computing facilities, or in the terminal
 equipment of its recipient;
@@ -144,51 +161,62 @@ of automated calling systems and communication systems;
 (h) ‘automated calling and communication systems’ means systems capable of
 automatically initiating calls to one or more recipients in accordance with
 instructions set for that system, and transmitting sounds which are not live speech,
-
-(^10) Commission Directive 2008/63/EC of 20 June 2008 on competition in the markets in
-telecommunications terminal equipment (OJ L 162, 21.6.2008, p. 20–26).
-
-
-```
 including calls made using automated calling and communication systems which
 connect the called person to an individual.
+
 ```
+Article 4
+Consent
+```
+1. The conditions for consent provided for under Regulation (EU) 2016/679/EU shall apply.
+2. Without prejudice to paragraph 1, where technically possible and feasible, for the
+    purposes of point (b) of Article 8(1), consent may be expressed by using the
+    appropriate technical settings of a software placed on the market
+    permitting electronic communications, including the retrieval and presentation of
+    information on the internet.
+
+3. End-users who have consented to the processing of electronic communications data
+    as set out in point (c) of Article 6(2) and points (a) and (b) of Article 6(3) shall be
+	reminded of the possibility  to withdraw their consent at periodic
+    intervals of [no longer than 12 months], as long as the processing continues.
+
 ## CHAPTER II
 
 ## PROTECTION OF ELECTRONIC COMMUNICATIONS OF
 
-## NATURAL AND LEGAL PERSONS AND OF INFORMATION
+## END-USERS AND OF THE INTEGRITY OF THEIR
 
-## STORED IN THEIR TERMINAL EQUIPMENT
+## TERMINAL EQUIPMENT
 
 ```
 Article 5
 Confidentiality of electronic communications data
 ```
-Electronic communications data shall be confidential. Any interference with electronic
-communications data, such as by listening, tapping, storing, monitoring, scanning or other
-kinds of interception, surveillance or processing of electronic communications data, by
+1. Electronic communications data shall be confidential. Any processing of electronic
+communications data, including listening, tapping, storing, monitoring, scanning or other
+kinds of interception or surveillance of electronic communications data, by
 persons other than the end-users, shall be prohibited, except when permitted by this
 Regulation.
+
+2. [Confidentiality of electronic communications data in machine-to-machine
+communications shall only apply when such communication is related to the enduser.]
 
 ```
 Article 6
 Permitted processing of electronic communications data
 ```
-1. Providers of electronic communications networks and services may process
-    electronic communications data if:
+1. Providers of electronic communications networks and services shall be permitted to process
+    electronic communications data only if:
 
 (a) it is necessary to achieve the transmission of the communication, for the duration
 necessary for that purpose; or
 
 (b) it is necessary to maintain or restore the security of electronic communications
-
-```
-networks and services, or detect technical faults and/or errors in the transmission of
+networks and services, or detect technical faults and/or errors and/or attacks in the transmission of
 electronic communications, for the duration necessary for that purpose.
-```
-2. Providers of electronic communications services may process electronic
-    communications metadata if:
+
+2. Without prejudice to paragraph 1, providers of electronic communications networks and
+services shall be permitted to process electronic communications metadata only if:
 
 (a) it is necessary to meet mandatory quality of service requirements pursuant to
 [Directive establishing the European Electronic Communications Code] or
@@ -198,23 +226,16 @@ Regulation (EU) 2015/2120^11 for the duration necessary for that purpose; or
 stopping fraudulent, or abusive use of, or subscription to, electronic communications
 services; or
 
-(^11) Regulation (EU) 2015/2120 of the European Parliament and of the Council of 25 November 2015
-laying down measures concerning open internet access and amending Directive 2002/22/EC on
-universal service and users’ rights relating to electronic communications networks and services and
-Regulation (EU) No 531/2012 on roaming on public mobile communications networks within the
-Union (OJ L 310, 26.11.2015, p. 1–18).
-
-
 (c) the end-user concerned has given his or her consent to the processing of his or her
 communications metadata for one or more specified purposes, including for the
-provision of specific services to such end-users, provided that the purpose or
+provision of services to such end-users, provided that the purpose or
 purposes concerned could not be fulfilled by processing information that is made
 anonymous.
 
-3. Providers of the electronic communications services may process electronic
-    communications content only:
+3. Without prejudice to paragraph 1, providers of the electronic communications networks and
+    services shall be permitted to process electronic communications content only:
 
-(a) for the sole purpose of the provision of a specific service to an end-user, if the end-
+(a) for the sole purpose of the provision of a service to an end-user, if the end-
 user or end-users concerned have given their consent to the processing of his or her
 electronic communications content and the provision of that service cannot be
 fulfilled without the processing of such content; or
@@ -222,7 +243,7 @@ fulfilled without the processing of such content; or
 (b) if all end-users concerned have given their consent to the processing of their
 electronic communications content for one or more specified purposes that cannot be
 fulfilled by processing information that is made anonymous, and the provider has
-consulted the supervisory authority. Points (2) and (3) of Article 36 of Regulation
+consulted the supervisory authority. Article 36(2) and (3) of Regulation
 (EU) 2016/679 shall apply to the consultation of the supervisory authority.
 
 ```
@@ -246,7 +267,8 @@ Storage and erasure of electronic communications data
 
 ```
 Article 8
-Protection of information stored in and related to end-users’ terminal equipment
+Protection of information stored in terminal equipment of end-users and [related to or processed
+by or emitted by] such equipment
 ```
 1. The use of processing and storage capabilities of terminal equipment and the
     collection of information from end-users’ terminal equipment, including about its
@@ -262,51 +284,47 @@ communication over an electronic communications network; or
 (c) it is necessary for providing an information society service requested by the end-
 user; or
 
-(d) if it is necessary for web audience measuring, provided that such measurement is
+(d) it is necessary for audience measuring, provided that such measurement is
 carried out by the provider of the information society service requested by the end-
-user.
+user or by a third party on behalf of the provider of the information society service 
+provided that conditions laid down in Article 28 of Regulation (EU) 2016/679 are met;
 
-2. The collection of information emitted by terminal equipment to enable it to connect
-    to another device and, or to network equipment shall be prohibited, except if:
+(e) it is necessary for a security update provided that the privacy settings chosen by the
+end-user are not changed in any way, the end-user is informed in advance and is
+given the possibility to postpone or turn off the automatic installation of these
+updates. 
+
+2. The collection of information emitted by terminal equipment of the end-user to enable it to connect
+    to another device and, or to network equipment shall be prohibited, except on the
+	following grounds:
 
 (a) it is done exclusively in order to, for the time necessary for, and for the purpose of
 establishing a connection; or
 
-(b) a clear and prominent notice is displayed informing of, at least, the modalities of the
+(b) the end-user has given his or her consent; or
+
+(c) it is necessary for the purpose of statistical counting that is limited in time and space
+to the extent necessary for this purpose and the data is made anonymous or erased as
+soon as it is no longer needed for this purpose.
+
+2a. For the purpose of paragraph 2 points (b) and (c), a clear and prominent notice shall
+displayed informing of, at least, the modalities of the
 collection, its purpose, the person responsible for it and the other information
 required under Article 13 of Regulation (EU) 2016/679 where personal data are
 collected, as well as any measure the end-user of the terminal equipment can take to
 stop or minimise the collection.
 
-```
-The collection of such information shall be conditional on the application of
+2b. For the purpose of paragraph 2 points (b) and (c) the collection of such information shall be conditional on the application of
 appropriate technical and organisational measures to ensure a level of security
 appropriate to the risks, as set out in Article 32 of Regulation (EU) 2016/679, have
 been applied.
-```
-3. The information to be provided pursuant to point (b) of paragraph 2 may be provided
+
+3. The information to be provided pursuant to paragraph 2a may be provided
     in combination with standardized icons in order to give a meaningful overview of the
     collection in an easily visible, intelligible and clearly legible manner.
-4. The Commission shall be empowered to adopt delegated acts in accordance with
-    Article 27 determining the information to be presented by the standardized icon and
-    the procedures for providing standardized icons.
-
-```
-Article 9
-Consent
-```
-1. The definition of and conditions for consent provided for under Articles 4(11) and 7
-    of Regulation (EU) 2016/679/EU shall apply.
-2. Without prejudice to paragraph 1, where technically possible and feasible, for the
-    purposes of point (b) of Article 8(1), consent may be expressed by using the
-    appropriate technical settings of a software application enabling access to the
-    internet.
-3. End-users who have consented to the processing of electronic communications data
-    as set out in point (c) of Article 6(2) and points (a) and (b) of Article 6(3) shall be
-    given the possibility to withdraw their consent at any time as set forth under Article
-    7(3) of Regulation (EU) 2016/679 and be reminded of this possibility at periodic
-    intervals of 6 months, as long as the processing continues.
-
+4. [The Commission shall be empowered to adopt delegated acts in accordance with
+    Article 25 determining the information to be presented by the standardized icon and
+    the procedures for providing standardized icons.]
 
 ```
 Article 10
@@ -314,14 +332,17 @@ Information and options for privacy settings to be provided
 ```
 1. Software placed on the market permitting electronic communications, including the
     retrieval and presentation of information on the internet, shall offer the option to
-    prevent third parties from storing information on the terminal equipment of an end-
+    prevent any other parties than the end-user from storing information on the terminal equipment of an end-
     user or processing information already stored on that equipment.
-2. Upon installation, the software shall inform the end-user about the privacy settings
-    options and, to continue with the installation, require the end-user to consent to a
+2. Upon installation or first usage, the software  referred to in paragraph 1 shall inform the end-user about the privacy settings
+    options and, to continue with the installation or usage, require the end-user to consent to a
     setting.
-3. In the case of software which has already been installed on 25 May 2018, the
+2a. The software referred to in paragraph 1 shall provide in a clear manner easy ways
+    for end-users to change the privacy setting consented to under paragraph 2 at any
+    time during the use.
+3. In the case of software which has already been installed on [25 May 2018], the
     requirements under paragraphs 1 and 2 shall be complied with at the time of the first
-    update of the software, but no later than 25 August 2018.
+    update of the software, but no later than [25 August 2018].
 
 ```
 Article 11
@@ -368,17 +389,16 @@ presentation of the calling line identification has been prevented by the callin
 user;
 
 (d) the called end-user with the possibility of preventing the presentation of the
-connected line identification to the calling end-user.
+connected line identification to which the calling end-user is connected.
 
-2. The possibilities referred to in points (a), (b), (c) and (d) of paragraph 1 shall be
+2. The possibilities referred to in paragraph 1 shall be
     provided to end-users by simple means and free of charge.
 3. Point (a) of paragraph 1 shall also apply with regard to calls to third countries
     originating in the Union. Points (b), (c) and (d) of paragraph 1 shall also apply to
     incoming calls originating in third countries.
 4. Where presentation of calling or connected line identification is offered, providers of
     publicly available number-based interpersonal communications services shall
-    provide information to the public regarding the options set out in points (a), (b), (c)
-    and (d) of paragraph 1.
+    provide information to the public regarding the options set out in paragraph 1.
 
 ```
 Article 13
@@ -402,9 +422,9 @@ Exceptions to presentation and restriction of calling and connected line identif
 Article 14
 Incoming call blocking
 ```
-Providers of publicly available number-based interpersonal communications services shall
+Providers of number-based interpersonal communications services shall
 
-deploy state of the art measures to limit the reception of unwanted calls by end-users and shall
+deploy state of the art measures to limit the reception of malicious or nuisance calls by end-users and shall
 
 also provide the called end-user with the following possibilities, free of charge:
 
@@ -418,41 +438,43 @@ equipment.
 Article 15
 Publicly available directories
 ```
-1. The providers of publicly available directories shall obtain the consent of end-users
-    who are natural persons to include their personal data in the directory and,
-    consequently, shall obtain consent from these end-users for inclusion of data per
-    category of personal data, to the extent that such data are relevant for the purpose of
-    the directory as determined by the provider of the directory. Providers shall give end-
-    users who are natural persons the means to verify, correct and delete such data.
-2. The providers of a publicly available directory shall inform end-users who are
+1. The [providers of publicly available directories] shall give end-users
+    who are natural persons the opportunity to determine per category of personal data whether their
+personal data are included in the publicly available directory, to the extent that such data are relevant for the purpose of
+    the directory as determined by the provider of the directory. 
+1a. The [providers of publicly available directories] s shall give end-
+    users who are natural persons the means to verify, correct and delete data included in a publicly available
+directory
+2. The [providers of a publicly available directory] shall inform end-users who are
     natural persons whose personal data are in the directory of the available search
-    functions of the directory and obtain end-users’ consent before enabling such search
+    functions of the directory and obtain the additional consent of end-users’ before enabling such search
     functions related to their own data.
-3. The providers of publicly available directories shall provide end-users that are legal
+3. The [providers of publicly available directories] shall provide end-users that are legal
     persons with the possibility to object to data related to them being included in the
-    directory. Providers shall give such end-users that are legal persons the means to
-    verify, correct and delete such data.
+    directory.
+3a. The [providers of publicly available directories] shall give end-users that are legal persons the means to
+    verify, correct and delete data a included in a publicly available directory.
 4. The possibility for end-users not to be included in a publicly available directory, or to
     verify, correct and delete any data related to them shall be provided free of charge.
 
 ```
 Article 16
-Unsolicited communications
+Direct marketing communications
 ```
 1. Natural or legal persons may use electronic communications services for the
-    purposes of sending direct marketing communications to end-users who are natural
+    purposes of [sending or presenting] direct marketing communications to end-users who are natural
     persons that have given their consent.
-2. Where a natural or legal person obtains electronic contact details for electronic mail
+2. Where a natural or legal person obtains electronic contact details for electronic message
     from its customer, in the context of the sale of a product or a service, in accordance
     with Regulation (EU) 2016/679, that natural or legal person may use these electronic
     contact details for direct marketing of its own similar products or services only if
     customers are clearly and distinctly given the opportunity to object, free of charge
     and in an easy manner, to such use. The right to object shall be given at the time of
-    collection and each time a message is sent.
+    collection and each time a direct marketing communication is [sent or presented].
 3. Without prejudice to paragraphs 1 and 2, natural or legal persons using electronic
     communications services for the purposes of placing direct marketing calls shall:
 
-(a) present the identity of a line on which they can be contacted; or
+(a) present the calling line identification on which they can be contacted; or
 
 (b) present a specific code/or prefix identifying the fact that the call is a marketing call.
 
@@ -462,21 +484,18 @@ Unsolicited communications
     their objection to receiving those communications.
 5. Member States shall ensure, in the framework of Union law and applicable national
     law, that the legitimate interest of end-users that are legal persons with regard to
-
-
-```
-unsolicited communications sent by means set forth under paragraph 1 are
+direct marketing communications [sent or presented] by means set forth under paragraph 1 are
 sufficiently protected.
-```
-6. Any natural or legal person using electronic communications services to transmit
+
+6. Any natural or legal person using electronic communications services to [send or present]
     direct marketing communications shall inform end-users of the marketing nature of
-    the communication and the identity of the legal or natural person on behalf of whom
-    the communication is transmitted and shall provide the necessary information for
+    the direct marketing communication and the identity of the legal or natural person on behalf of whom
+    the communication is [sent or presented] and shall provide the necessary information for
     recipients to exercise their right to withdraw their consent, in an easy manner, to
-    receiving further marketing communications.
-7. The Commission shall be empowered to adopt implementing measures in accordance
+    receiving further direct marketing communications.
+7. [The Commission shall be empowered to adopt implementing measures in accordance
     with Article 26(2) specifying the code/or prefix to identify marketing calls, pursuant
-    to point (b) of paragraph 3.
+    to point (b) of paragraph 3.]
 
 ```
 Article 17
@@ -501,12 +520,21 @@ indication of the likely costs involved.
 Article 18
 Independent supervisory authorities
 ```
+0. Each Member State shall provide for one or more independent public authorities to
+   be responsible for monitoring the application of this Regulation (‘supervisory
+   authorities’), in accordance with paragraphs 1 and 1a of this Article.
 1. The independent supervisory authority or authorities responsible for monitoring the
     application of Regulation (EU) 2016/679 shall also be responsible for monitoring the
-    application of this Regulation. Chapter VI and VII of Regulation (EU) 2016/679
+    application of Chapter II of this Regulation. Chapter VI and VII of Regulation (EU) 2016/679
     shall apply _mutatis mutandis_. The tasks and powers of the supervisory authorities
     shall be exercised with regard to end-users.
-2. The supervisory authority or authorities referred to in paragraph 1 shall cooperate
+1a. Member Sates shall entrust the monitoring of the application of Chapter III of this
+    Regulation to the supervisory authorities referred to in paragraph 1 of this Article or
+    to other supervisory authorities having an equivalent level of independence.
+1b. Where more than one supervisory authority is responsible for monitoring the
+    application of this Regulation in a Member State, such authorities shall cooperate
+    with each other. 
+2. The supervisory authorities referred to in paragraphs 1 and 1a shall cooperate
     whenever appropriate with national regulatory authorities established pursuant to the
     [Directive Establishing the European Electronic Communications Code].
 
@@ -516,7 +544,7 @@ European Data Protection Board
 ```
 The European Data Protection Board, established under Article 68 of Regulation (EU)
 
-2016/679, shall have competence to ensure the consistent application of this Regulation. To
+2016/679, shall have competence to ensure the consistent application of Chapter II of this Regulation. To
 
 that end, the European Data Protection Board shall exercise the tasks laid down in Article 70
 
@@ -535,9 +563,10 @@ Article 20
 Cooperation and consistency procedures
 ```
 Each supervisory authority shall contribute to the consistent application of this Regulation
-throughout the Union. For this purpose, the supervisory authorities shall cooperate with each
+throughout the Union. For this purpose, the supervisory authorities designated in accordance with
+Article 18(1) shall cooperate with each
 other and the Commission in accordance with Chapter VII of Regulation (EU) 2016/ 679
-regarding the matters covered by this Regulation.
+regarding the matters covered by Chapter II of this Regulation.
 
 ## CHAPTER V
 
@@ -550,9 +579,10 @@ Remedies
 1. Without prejudice to any other administrative or judicial remedy, every end-user of
     electronic communications services shall have the same remedies provided for in
     Articles 77, 78, and 79 of Regulation (EU) 2016/679.
+1a. End-users who are natural persons shall also have the right to representation
+provided for in Article 80 of Regulation (EU) 2016/679.
 2. Any natural or legal person other than end-users adversely affected by infringements
-    of this Regulation and having a legitimate interest in the cessation or prohibition of
-    alleged infringements, including a provider of electronic communications services
+    of this Regulation, including a provider of electronic communications services
     protecting its legitimate business interests, shall have a right to bring legal
     proceedings in respect of such infringements.
 
@@ -562,15 +592,14 @@ Right to compensation and liability
 ```
 Any end-user of electronic communications services who has suffered material or non-
 material damage as a result of an infringement of this Regulation shall have the right to
-receive compensation from the infringer for the damage suffered, unless the infringer proves
-that it is not in any way responsible for the event giving rise to the damage in accordance with
+receive compensation from the infringer for the damage suffered in accordance with
 Article 82 of Regulation (EU) 2016/679.
 
 ```
 Article 23
 General conditions for imposing administrative fines
 ```
-1. For the purpose of this Article, Chapter VII of Regulation (EU) 2016/679 shall apply
+1. For the purpose of this Article, Chapter VIII of Regulation (EU) 2016/679 shall apply
     to infringements of this Regulation.
 2. Infringements of the following provisions of this Regulation shall, in accordance
     with paragraph 1, be subject to administrative fines up to EUR 10 000 000, or in the
@@ -599,7 +628,7 @@ services pursuant to Article 16.
     % of the total worldwide annual turnover of the preceding financial year, whichever
     is higher.
 4. Member States shall lay down the rules on penalties for infringements of Articles 12,
-    13, 14, and 17.
+    13 and 14.
 5. Non-compliance with an order by a supervisory authority as referred to in Article 18,
     shall be subject to administrative fines up to 20 000 000 EUR, or in the case of an
     undertaking, up to 4 % of the total worldwide annual turnover of the preceding
@@ -687,7 +716,7 @@ Committee
 Article 27
 Repeal
 ```
-1. Directive 2002/58/EC is repealed with effect from 25 May 2018.
+1. Directive 2002/58/EC is repealed with effect from [25 May 2018].
 2. References to the repealed Directive shall be construed as references to this
     Regulation.
 
@@ -695,7 +724,7 @@ Repeal
 Article 28
 Monitoring and evaluation clause
 ```
-By 1 January 2018 at the latest, the Commission shall establish a detailed programme for
+By [1 January 2018] at the latest, the Commission shall establish a detailed programme for
 monitoring the effectiveness of this Regulation.
 
 No later than three years after the date of application of this Regulation, and every three years
@@ -710,11 +739,7 @@ Entry into force and application
 ```
 1. This Regulation shall enter into force on the twentieth day following that of its
     publication in the _Official Journal of the European Union_.
-2. It shall apply from 25 May 2018.
-
-(^12) Regulation (EU) No 182/2011 of the European Parliament and of the Council of 16 February 2011
-laying down the rules and general principles concerning mechanisms for control by Member States of
-the Commission’s exercise of implementing powers (OJ L 55, 28.2.2011, p. 13–18).
+2. It shall apply from [25 May 2018].
 
 
 This Regulation shall be binding in its entirety and directly applicable in all Member States.
