--- a/2017-0003 (COD).md
+++ b/2017-0003 (COD).md
@@ -11,13 +11,18 @@ Subject matter
     communications services, and in particular, the rights to respect for private life and
     communications and the protection of natural persons with regard to the processing
     of personal data.
+1a. This Regulation lays down rules regarding the protection of the
+    fundamental rights and freedoms of legal persons in the provision and use of the
+    electronic communications services, and in particular their rights to respect of
+    communications. 
 2. The free movement of electronic communications data and
     electronic communications services within the Union shall be neither
     restricted nor prohibited for reasons related to the respect for the private life and
     communications of natural persons and the protection of natural persons
     with regard to the processing of personal data, and for protection of communications of legal persons. 
 3. The provisions of this Regulation particularise and complement Regulation (EU)
-    2016/679 by laying down specific rules for the purposes mentioned in paragraphs 1
+    2016/679 with regard to the processing of electronic communications data that qualify as
+    personal data by laying down specific rules for the purposes mentioned in paragraphs 1
     to 2.
 
 ```
@@ -30,7 +35,7 @@ Material Scope
 electronic communications metadata carried out in connection with the provision and the
 use of electronic communications services;
 
-(b) information [related to or processed by or emitted by or stored in] the terminal
+(b) information processed by or emitted by or stored in the terminal
 equipment of end-users.
 
 (c) the placing on the market of software permitting electronic communications,
@@ -71,33 +76,42 @@ Territorial scope and representative
 ```
 1. This Regulation applies to:
 
-(a) the provision of electronic communications services to end-users in the Union
+(a) the provision of electronic communications services to end-users who are in the Union
 
 (aa) the processing of electronic communications content in transmission of electronic
-communications metadata of end-users located in the Union;
+communications metadata of end-users who are in the Union;
 
-(c) the protection of information [related to or processed by or emitted by or stored in] the
-terminal equipment of end-users located in the Union.
+(c) the protection of information processed by or emitted by or stored in the
+terminal equipment of end-users who are in the Union.
 
-(ca) the offering of publicly available directories of end-users of electronic
-communications services located in the Union;
-
-(cb) the placing on the Union market of software permitting electronic communications,
+(ca) the placing on the Union market of software permitting electronic communications,
 including the retrieval and presentation of information on the internet;
 
-(cc) the [sending or presenting] of direct marketing communications to end-users located
+(cb) the offering of publicly available directories of end-users of electronic
+communications services whoe are in the Union;
+
+(cc) the sending or presenting of direct marketing communications to end-users who are
 in the Union.
 
-2. Where the [provider of an electronic communications service] is not established in the
+2. Where the provider of an electronic communications servicee, the provider of a publicly
+    available directory or the provider of software enabling electronic communications or
+    a person using electronic communications services to send or present direct
+    marketing communications or makes use of processing and storage capabilities or
+    collects information processed by or emitted by or sored in the end-users’ terminal
+    equipment is not established in the
     Union it shall designate in writing a representative in the Union.
+2a. The requirements laid down in paragraph 2 shall not apply if activities listed in
+    paragraph 1 are occasional and are unlikely to result in a risk to the fundamental
+    rights of end-users taking into account the nature, context, scope and purpose of
+    those activities.
 3. The representative shall be established in one of the Member States where the end-
     users of such electronic communications services are located.
-4. The representative shall be mandated by the provider it represents to be addressed
+4. The representative shall be mandated by the provider or person it represents to be addressed
     in addition to or instead of the provider it represents, in particular, to supervisory
     authorities, and end-users, on all issues related to processing electronic
     communications data for the purposes of ensuring compliance with this Regulation.
 5. The designation of a representative pursuant to paragraph 2 shall be without
-    prejudice to legal actions, which could be initiated against the provider it
+    prejudice to legal actions, which could be initiated against the provider or person it
     represents.
 
 ```
@@ -121,8 +135,8 @@ Directive 2008/63/EC.
 (d) the defintion of ‘information society service’ in point (b) of Article 1 (1) of Directive
 (EU) 2015/1535.
 
-2. For the purposes of point (b) of paragraph 1, the definition of ‘interpersonal
-    communications service’ shall include services which enable interpersonal and
+2. For the purposes of this Regulation, the definition of ‘interpersonal
+    communications service’ referred to in point (b) of paragraph 1 shall include services which enable interpersonal and
     interactive communication merely as a ancillary feature that is intrinsically
     linked to another service.
 3. In addition, for the purposes of this Regulation the following definitions shall apply:
@@ -133,8 +147,8 @@ electronic communications metadata;
 (b) ‘electronic communications content’ means the content exchanged by means of
 electronic communications services, such as text, voice, videos, images, and sound;
 
-(c) ‘electronic communications metadata’ means data processed in an electronic
-communications network for the purposes of transmitting, distributing or exchanging
+(c) ‘electronic communications metadata’ by means of data processed in an electronic
+communications services for the purposes of transmitting, distributing or exchanging
 electronic communications content; including data used to trace and identify the
 source and destination of a communication, data on the location of the device
 generated in the context of providing electronic communications services, and the
@@ -145,15 +159,15 @@ communications services, whether in printed or electronic form, which is publish
 or made available to the public or to a section of the public, including by means of a
 directory enquiry service;
 
-(e) ‘electronic message’ means any electronic message containing information such as text,
+(e) ‘electronic message’ means any message containing information such as text,
 voice, video, sound or image sent over an electronic communications network which
 can be stored in the network or in related computing facilities, or in the terminal
 equipment of its recipient;
 
 (f) ‘direct marketing communications’ means any form of advertising, whether written
-or oral, sent to one or more identified or identifiable end-users of electronic
+or oral, sent or presented to one or more identified or identifiable end-users of electronic
 communications services, including the use of automated calling and communication
-systems with or without human interaction, electronic mail, SMS, etc.;
+systems with or without human interaction, electronic message, SMS, etc.;
 
 (g) ‘direct marketing voice-to-voice calls’ means live calls, which do not entail the use
 of automated calling systems and communication systems;
@@ -168,7 +182,13 @@ connect the called person to an individual.
 Article 4
 Consent
 ```
-1. The conditions for consent provided for under Regulation (EU) 2016/679/EU shall apply.
+1. The provisions for consent provided for under Regulation (EU) 2016/679/EU shall apply
+    to natural persons and, *mutatis mutandis*, to legal persons
+
+1a. Paragraph 1 is without prejudice to national legislation on determining the persons
+    who are authorised to represent a legal person in any dealings with third parties or in
+    legal proceedings.
+
 2. Without prejudice to paragraph 1, where technically possible and feasible, for the
     purposes of point (b) of Article 8(1), consent may be expressed by using the
     appropriate technical settings of a software placed on the market
@@ -178,7 +198,8 @@ Consent
 3. End-users who have consented to the processing of electronic communications data
     as set out in point (c) of Article 6(2) and points (a) and (b) of Article 6(3) shall be
 	reminded of the possibility  to withdraw their consent at periodic
-    intervals of [no longer than 12 months], as long as the processing continues.
+    intervals of [no longer than 12 months], as long as the processing continues,
+	unless the end-user requests not to receive such reminders.
 
 ## CHAPTER II
 
@@ -198,8 +219,9 @@ kinds of interception or surveillance of electronic communications data, by
 persons other than the end-users, shall be prohibited, except when permitted by this
 Regulation.
 
-2. [Confidentiality of electronic communications data in machine-to-machine
-communications shall only apply when such communication is related to the enduser.]
+2. [Confidentiality of electronic communications data shall apply to the transmission of 
+   machine-to-machine electronic communications where carried out via an electronic
+   communications service.]
 
 ```
 Article 6
