--- a/2017-0003 (COD).md
+++ b/2017-0003 (COD).md
@@ -396,7 +396,7 @@ Presentation and restriction of calling and connected line identification
 ```
 1. Where presentation of the calling and connected line identification is offered in
     accordance with Article [107] of the [Directive establishing the European Electronic
-    Communication Code], the providers of publicly available number-based
+    Communication Code], the providers of number-based
     interpersonal communications services shall provide the following:
 
 (a) the calling end-user with the possibility of preventing the presentation of the calling
@@ -424,21 +424,26 @@ connected line identification to which the calling end-user is connected.
 
 ```
 Article 13
-Exceptions to presentation and restriction of calling and connected line identification
+Exceptions to provide access to emeregency services
 ```
 1. Regardless of whether the calling end-user has prevented the presentation of the
     calling line identification, where a call is made to emergency services, providers of
-    publicly available number-based interpersonal communications services shall
+    number-based interpersonal communications services shall
     override the elimination of the presentation of the calling line identification and the
     denial or absence of consent of an end-user for the processing of metadata, on a per-
     line basis for organisations dealing with emergency communications, including
     public safety answering points, for the purpose of responding to such
     communications.
 2. Member States shall establish more specific provisions with regard to the
-    establishment of procedures and the circumstances where providers of publicly
-    available number-based interpersonal communication services shall override the
+    establishment of procedures and the circumstances where providers of
+	number-based interpersonal communication services shall override the
     elimination of the presentation of the calling line identification on a temporary basis,
     where end-users request the tracing of malicious or nuisance calls.
+3. Regardless of whether the end-user has prevented access to the terminal equipment’s
+    Global Navigation Satellite Systems (GNSS) capabilities through the terminal
+    equipment settings, when a call is made to emergency services, such settings may not
+    prevent access to GNSS data to determine and provide the caller location to
+    emergency services for the purpose of responding to such calls.
 
 ```
 Article 14
@@ -450,7 +455,8 @@ deploy state of the art measures to limit the reception of malicious or nuisance
 
 also provide the called end-user with the following possibilities, free of charge:
 
-(a) to block incoming calls from specific numbers or from anonymous sources;
+(a) to block incoming calls from specific numbers or from anonymous sources or from
+numbers using a specific code or prefix referred to in Article 16(3a);
 
 (b) to stop automatic call forwarding by a third party to the end-user's terminal
 equipment.
@@ -460,21 +466,21 @@ equipment.
 Article 15
 Publicly available directories
 ```
-1. The [providers of publicly available directories] shall give end-users
+1. The providers of number-based interpersonal communications services shall give end-users
     who are natural persons the opportunity to determine per category of personal data whether their
 personal data are included in the publicly available directory, to the extent that such data are relevant for the purpose of
     the directory as determined by the provider of the directory. 
-1a. The [providers of publicly available directories] s shall give end-
+1a. The providers of number-based interpersonal communications services shall give end-
     users who are natural persons the means to verify, correct and delete data included in a publicly available
 directory
-2. The [providers of a publicly available directory] shall inform end-users who are
+2. The providers of number-based interpersonal communications services shall inform end-users who are
     natural persons whose personal data are in the directory of the available search
     functions of the directory and obtain the additional consent of end-users’ before enabling such search
     functions related to their own data.
-3. The [providers of publicly available directories] shall provide end-users that are legal
+3. The providers of number-based interpersonal communications services shall provide end-users that are legal
     persons with the possibility to object to data related to them being included in the
     directory.
-3a. The [providers of publicly available directories] shall give end-users that are legal persons the means to
+3a. The providers of number-based interpersonal communications services shall give end-users that are legal persons the means to
     verify, correct and delete data a included in a publicly available directory.
 4. The possibility for end-users not to be included in a publicly available directory, or to
     verify, correct and delete any data related to them shall be provided free of charge.
@@ -486,19 +492,24 @@ Direct marketing communications
 1. Natural or legal persons may use electronic communications services for the
     purposes of [sending or presenting] direct marketing communications to end-users who are natural
     persons that have given their consent.
-2. Where a natural or legal person obtains electronic contact details for electronic message
-    from its customer, in the context of the sale of a product or a service, in accordance
+2. Where a natural or legal person obtains contact details for electronic message
+    from end-users who are natural persons, in the context of the sale of a product or a service, in accordance
     with Regulation (EU) 2016/679, that natural or legal person may use these electronic
     contact details for direct marketing of its own similar products or services only if
-    customers are clearly and distinctly given the opportunity to object, free of charge
+    such end-users are clearly and distinctly given the opportunity to object, free of charge
     and in an easy manner, to such use. The right to object shall be given at the time of
-    collection and each time a direct marketing communication is [sent or presented].
+    collection and each time such direct marketing communication is [sent or presented].
 3. Without prejudice to paragraphs 1 and 2, natural or legal persons using electronic
-    communications services for the purposes of placing direct marketing calls shall:
+    communications services for the purposes of placing direct marketing calls shall
+    present the calling line identification on which they can be contacted.
 
-(a) present the calling line identification on which they can be contacted; or
-
-(b) present a specific code/or prefix identifying the fact that the call is a marketing call.
+3a. Member States may require natural or legal person using electronic
+    communications services for the purposes of placing direct marketing calls to
+    present a specific code/or prefix identifying the fact that the call is a direct marketing
+    call in addition to the obligation set out in paragraph 3. Member State requiring
+    the use of such a specific code or prefix shall make it available for the natural or
+    legal persons who use electronic communications services for the purposes of
+    direct marketing calls
 
 4. Notwithstanding paragraph 1, Member States may provide by law that the placing of
     direct marketing voice-to-voice calls to end-users who are natural persons shall only
@@ -513,11 +524,8 @@ sufficiently protected.
     direct marketing communications shall inform end-users of the marketing nature of
     the direct marketing communication and the identity of the legal or natural person on behalf of whom
     the communication is [sent or presented] and shall provide the necessary information for
-    recipients to exercise their right to withdraw their consent, in an easy manner, to
-    receiving further direct marketing communications.
-7. [The Commission shall be empowered to adopt implementing measures in accordance
-    with Article 26(2) specifying the code/or prefix to identify marketing calls, pursuant
-    to point (b) of paragraph 3.]
+    end-users who are natural persons to exercise their right to withdraw their consent, 
+	in an easy manner and free of charge, to receiving further direct marketing communications.
 
 ```
 Article 17
@@ -547,7 +555,7 @@ Independent supervisory authorities
    authorities’), in accordance with paragraphs 1 and 1a of this Article.
 1. The independent supervisory authority or authorities responsible for monitoring the
     application of Regulation (EU) 2016/679 shall also be responsible for monitoring the
-    application of Chapter II of this Regulation. Chapter VI and VII of Regulation (EU) 2016/679
+    application of Chapter II of this Regulation. Without prejudice to article 19, Chapter VI and VII of Regulation (EU) 2016/679
     shall apply _mutatis mutandis_. The tasks and powers of the supervisory authorities
     shall be exercised with regard to end-users.
 1a. Member Sates shall entrust the monitoring of the application of Chapter III of this
@@ -564,31 +572,71 @@ Independent supervisory authorities
 Article 19
 European Data Protection Board
 ```
-The European Data Protection Board, established under Article 68 of Regulation (EU)
+1. The European Data Protection Board, established under Article 68 of Regulation (EU)
+    2016/679, shall have competence to ensure the consistent application of Chapter II of this Regulation.
 
-2016/679, shall have competence to ensure the consistent application of Chapter II of this Regulation. To
-
-that end, the European Data Protection Board shall exercise the tasks laid down in Article 70
-
-of Regulation (EU) 2016/679. The Board shall also have the following tasks:
-
+2. For the purposes of this Regulation, Tthe Board shall also have the following tasks:
 
 (a) advise the Commission on any proposed amendment of this Regulation;
 
 (b) examine, on its own initiative, on request of one of its members or on request of the
-Commission, any question covering the application of this Regulation and issue
-guidelines, recommendations and best practices in order to encourage consistent
-application of this Regulation.
+    Commission, any question covering the application of this Regulation in relation to
+    Chapter II and issue guidelines, recommendations and best practices in order to encourage consistent
+    application of this Regulation.
+
+(c) draw up guidelines for supervisory authorities referred to in paragraph 1 of Article
+    18 in relation to their powers as laid down in Article 58 of Regulation (EU) 2016/679
+    and setting of administrative fines pursuant to Article 23 of this Regulation;
+
+(d) issue guidelines, recommendations and best practices in accordance with point (b) of
+    this paragraph for establishing common procedures for reporting by end-users of
+    infringements of this Regulation regarding rules laid down in paragraph 2 of Article
+    54 of Regulation (EU) 2016/679;
+
+(e) [provide the Commission with an opinion on the icons referred to in paragraph 3 of
+    Article 8];
+
+(f) promote the cooperation and effective bilateral and multilateral exchange of
+    information and best practices between the supervisory authorities referred to in
+    paragraph 1 of Article 18;
+
+(g) promote common training programmes and facilitate personnel exchanges between
+    the supervisory authorities referred to in paragraph 1 of Article 18 and, where
+    appropriate, with the supervisory authorities of third countries or with international
+    organisations;
+
+(h) promote the exchange of knowledge and documentation on legislation on protection
+    of electronic communications of end-users and of the integrity of their terminal
+    equipment as laid down in Chapter II and practice relevant supervisory authorities
+    world wide;
+
+(i) maintain a publicly accessible electronic register of decisions taken by supervisory
+    authorities referred to in paragraph 1 o fArticle 18 and courts on issues handled in
+    the consistency mechanism.
+
+3. Where the Commission requests advice from the Board, it may indicate a time limit,
+    taking into account the urgency of the matter.
+
+4. The Board shall forward its opinions, guidelines, recommendations, and best
+    practices to the Commission and make them public.
+
+5. The Board shall, where appropriate, consult interested parties and give them the
+    opportunity to comment within a reasonable period. The Board shall, without
+    prejudice to Article 76 of Regulation (EU) 2016/679, make the result of the
+    consultation procedures publicly available.
 
 ```
 Article 20
 Cooperation and consistency procedures
 ```
-Each supervisory authority shall contribute to the consistent application of this Regulation
-throughout the Union. For this purpose, the supervisory authorities designated in accordance with
-Article 18(1) shall cooperate with each
-other and the Commission in accordance with Chapter VII of Regulation (EU) 2016/ 679
-regarding the matters covered by Chapter II of this Regulation.
+1. Each supervisory authority shall contribute to the consistent application of this Regulation
+    throughout the Union and cooperate with each other and with the Commission. 
+
+2. For the purpose laid down in paragraph 1 and without prejudice to article 19, 
+    the supervisory authorities designated in accordance with
+    Article 18(1) shall cooperate with each
+    other and the Commission in accordance with Chapter VII of Regulation (EU) 2016/ 679
+    regarding the matters covered by Chapter II of this Regulation.
 
 ## CHAPTER V
 
