--- a/2017-0003 (COD).md
+++ b/2017-0003 (COD).md
@@ -21,7 +21,7 @@ Subject matter
     communications of natural persons and the protection of natural persons
     with regard to the processing of personal data, and for protection of communications of legal persons. 
 3. The provisions of this Regulation particularise and complement Regulation (EU)
-    2016/679 with regard to the processing of electronic communications data that qualify as
+    2016/679 with regard to the processing of data that qualify as
     personal data by laying down specific rules for the purposes mentioned in paragraphs 1
     to 2.
 
@@ -179,7 +179,7 @@ including calls made using automated calling and communication systems which
 connect the called person to an individual.
 
 ```
-Article 4
+Article 4a
 Consent
 ```
 1. The provisions for consent provided for under Regulation (EU) 2016/679/EU shall apply
@@ -216,12 +216,8 @@ Confidentiality of electronic communications data
 1. Electronic communications data shall be confidential. Any processing of electronic
 communications data, including listening, tapping, storing, monitoring, scanning or other
 kinds of interception or surveillance of electronic communications data, by
-persons other than the end-users, shall be prohibited, except when permitted by this
+anyone other than the end-users concerned, shall be prohibited, except when permitted by this
 Regulation.
-
-2. [Confidentiality of electronic communications data shall apply to the transmission of 
-   machine-to-machine electronic communications where carried out via an electronic
-   communications service.]
 
 ```
 Article 6
@@ -303,15 +299,11 @@ Storage and erasure of electronic communications data
 1. Without prejudice to point (b) of Article 6(1) and points (a) and (b) of Article 6(3),
     the provider of the electronic communications service shall erase electronic
     communications content or make that data anonymous after receipt of electronic
-    communication content by the intended recipient or recipients. Such data may be
-    recorded or stored by the end-users or by a third party entrusted by them to record,
-    store or otherwise process such data, in accordance with Regulation (EU) 2016/679.
+    communication content by the intended recipient or recipients.
 2. Without prejudice to point (b) of Article 6(1) and points (a), (c) and (ce) of Article 6(2),
     the provider of the electronic communications service shall erase electronic
     communications metadata or make that data anonymous when it is no longer needed
-    for the purpose of the transmission of a communication. Such data may be recorded or
-    stored by the end-users or by a third party entrusted by them to record, store or
-    otherwise process such data, in accordance with Regulation (EU) 2016/679.
+    for the purpose of the transmission of a communication.
 3. Where the processing of electronic communications metadata takes place for the
     purpose of billing in accordance with point (b) of Article 6(2), the relevant metadata
     may be kept until the end of the period during which a bill may lawfully be
@@ -453,12 +445,14 @@ connected line identification to which the calling end-user is connected.
     originating in the Union. Points (b), (c) and (d) of paragraph 1 shall also apply to
     incoming calls originating in third countries.
 4. Where presentation of calling or connected line identification is offered, providers of
-    publicly available number-based interpersonal communications services shall
-    provide information to the public regarding the options set out in paragraph 1.
+    number-based interpersonal communications services shall
+    provide information to the public regarding the options set out in paragraph 1
+    and the exceptions set forth in Article 13(1), (1a) and (2). 
 
 ```
 Article 13
-Exceptions to provide access to emeregency services
+Exceptions to presentation and restriction of calling and connected line identification, to rejection
+of incoming calls and to provide access to emeregency services
 ```
 1. Regardless of whether the calling end-user has prevented the presentation of the
     calling line identification, where a call is made to emergency services, providers of
@@ -468,29 +462,36 @@ Exceptions to provide access to emeregency services
     line basis for organisations dealing with emergency communications, including
     public safety answering points, for the purpose of responding to such
     communications.
+1a. Regardless whether the called end-user rejects incoming calls where the presentation
+    of the calling line identification has been prevented by the calling end-user, providers
+    of number-based interpersonal communications services shall override this choice,
+    where technically possible, when the calling end-user is an organisation dealing with
+    emergency communications, including public safety answering points, for the purpose
+    of responding to such communications.
 2. Member States shall establish more specific provisions with regard to the
     establishment of procedures and the circumstances where providers of
 	number-based interpersonal communication services shall override the
     elimination of the presentation of the calling line identification on a temporary basis,
-    where end-users request the tracing of malicious or nuisance calls.
+    where end-users request the tracing of unwanted, malicious or nuisance calls.
 3. Regardless of whether the end-user has prevented access to the terminal equipment’s
-    Global Navigation Satellite Systems (GNSS) capabilities through the terminal
+    Global Navigation Satellite Systems (GNSS) capabilities or other types of
+    terminal equipment based location data through the terminal
     equipment settings, when a call is made to emergency services, such settings may not
-    prevent access to GNSS data to determine and provide the caller location to
+    prevent access to such location data to determine and provide the calling end-user's location to
     emergency services for the purpose of responding to such calls.
 
 ```
 Article 14
 Incoming call blocking
 ```
-Providers of number-based interpersonal communications services shall
+1. Providers of number-based interpersonal communications services shall
+    deploy state of the art measures to limit the reception of unwanted, malicious or nuisance calls by end-users.
 
-deploy state of the art measures to limit the reception of malicious or nuisance calls by end-users and shall
-
-also provide the called end-user with the following possibilities, free of charge:
+2. Providers of number-based interpersonal communications services shall
+    also provide the called end-user with the following possibilities, free of charge:
 
 (a) to block incoming calls from specific numbers or from anonymous sources or from
-numbers using a specific code or prefix referred to in Article 16(3a);
+numbers using a specific code or prefix referred to in Article 16(3a); and
 
 (b) to stop automatic call forwarding by a third party to the end-user's terminal
 equipment.
